# datamodel-hcl

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
data/testdata/: col_test.xlsx  rosetta.hcl  test_file_xlsx_col.xlsx  test_file_xlsx_row.xlsx  transform_csv.hcl  transform_xlsx.hcl
datamodel-hcl-cli/: Cargo.toml
datamodel-hcl-cli/src/: cli.rs  main.rs  operations.rs
export-data/: Cargo.toml
export-data/src/: export.rs  lib.rs  operations.rs  table.rs
import-data/: Cargo.toml
import-data/src/: errors.rs  lib.rs  operations.rs
import-data/src/adapters/: read_xlsx.rs
import-data/src/importers/: mod.rs
import-data/src/importers/csv_import/: import_csv.rs  mod.rs
import-data/src/importers/hcl_import/: import_hcl.rs  mod.rs  read_hcl.rs  read_transform_hcl.rs
import-data/src/importers/xlsx_import/: import_xlsx.rs  mod.rs  read_xlsx.rs
manipulate-data/: Cargo.toml
manipulate-data/src/: lib.rs  operations.rs
manipulate-data/src/manipulation/: assignments.rs  check_data.rs  date.rs  date_variants.rs  manipulate.rs  manipulated_data_sheet.rs  mod.rs  shape_data.rs  xlsx_data_sheet.rs
parse-data/: Cargo.toml
parse-data/src/: errors.rs  expression_trait.rs  lib.rs  operations.rs  to_2_string.rs
parse-data/src/datamodel_parse/: mod.rs
parse-data/src/datamodel_parse/domain/: label.rs  mod.rs  ontology.rs  project_model.rs  property.rs  res_props.rs  resource.rs
parse-data/src/datamodel_parse/domain/builders/: mod.rs  project_model.rs
parse-data/src/transform_parse/domain/: assignment.rs  condition.rs  function_body.rs  header_value.rs  method.rs  method_info.rs  methods.rs  mod.rs  organized_by.rs  read_transform_hcl.rs  sheet_info.rs  test_method.rs  transform_hcl.rs  transform_type.rs  transformations.rs  worksheet_info.rs
parse-data/src/transform_parse/domain/builders/: mod.rs  transform_hcl.rs
parse-data/src/transform_parse/domain/methods_domain/: behavior_type.rs  combine_method.rs  date_bricks.rs  date_pattern.rs  date_type.rs  lower_upper_method.rs  method.rs  mod.rs  replace_method.rs  target_type.rs  to_date_method.rs  wrapper_trait.rs
parse-data/src/xlsx_parse/: data_sheet.rs  mod.rs  organize_structure.rs  parsed_data_sheet.rs
parse-hcl-datamodel/: Cargo.toml
parse-hcl-datamodel/src/: lib.rs  operations.rs
parse-hcl-datamodel/src/domain/: label.rs  mod.rs  project_model.rs  property.rs  res_props.rs
parse-hcl-datamodel/src/domain/builders/: project_model.rs
src/: cli.rs  lib.rs  main.rs
src/datamodel_hcl/: errors.rs  lib.rs  operations.rs
src/datamodel_hcl/domain/: descriptions.rs  keywords.rs  label.rs  longname.rs  mod.rs  ontology.rs  password.rs  project_info.rs  project_model.rs  property.rs  res_props.rs  resource.rs  shortcode.rs  shortname.rs
src/datamodel_hcl/domain/builders/: mod.rs  project_model.rs
src/input_to_dataframe/adapters/xlsx_domain/: read_xlsx.rs
src/input_to_dataframe/domain/: PropertyInstance.rs  ResourceInstance.rs  dataframe.rs
src/parser/: parser.rs
