[package]
name = "datamodel-hcl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "datamodel_hcl"
path = "src/datamodel_hcl/lib.rs"


[dependencies]
clap = { version = "4.4.0", features = ["derive"] } # command-line parser
hcl-rs = "0.16.4" # HCL parser
anyhow = "1.0.75"
office = "0.8.1"
