[package]
name = "datamodel-hcl-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "datamodel-hcl-cli provides command line functions for datamodel import and validation and for data import, transformation and validation as well."
authors = ["GNahcab"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
hcl-rs.workspace = true
clap = { workspace = true, features = ["derive"] }
