[package]
name = "manipulate-data"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "this package allows transform and validation DaSCH data models written in HCL"
authors = ["GNahcab"]

[dependencies]
parse-data = { path = "../parse-data", version = "0.1.0" }
import-data = { path = "../import-data", version = "0.1.0" }
anyhow.workspace = true
arrow.workspace = true
polars.workspace = true
regex.workspace = true
